# mediapipe-pyxel-demo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
assets/reaction/: answers.txt  lines_1.txt  lines_2.txt
assets/reaction/sounds/: count.pyxres  finish.pyxres  line2.pyxres  prompt.pyxres  result_bad.pyxres  result_good.pyxres  start.pyxres
src/mediapipe_pyxel_demo/: __main__.py  app.py  events.py  mesh_output.py  registry.py
src/mediapipe_pyxel_demo/games/: __init__.py
src/mediapipe_pyxel_demo/games/menu/: __init__.py  game.py
src/mediapipe_pyxel_demo/games/reaction/: __init__.py  game.py  practice.py  scenes.py
src/mediapipe_pyxel_demo/games/reaction_vs/: __init__.py  game.py  scenes.py
src/mediapipe_pyxel_demo/games/runner/: __init__.py  game.py
src/mediapipe_pyxel_demo/games/test/: game.py
src/mediapipe_pyxel_demo/input_providers/: __init__.py  keyboard.py  mediapipe_face.py
